# algo-prac

01symmetric_difference/: CMakeLists.txt  symmdiff.cpp
01symmetric_difference/scripts/: gen.py
02multiset_intersection/: CMakeLists.txt  in.txt
02multiset_intersection/scripts/: gen.py
03polynomial_calculation/: CMakeLists.txt  in.txt
03polynomial_calculation/scripts/: gen.py
04counting_comments/: CMakeLists.txt
05partition_problem/: CMakeLists.txt
06subarray_sum/: CMakeLists.txt
06subarray_sum/scripts/: gen.py
07longarithm/: CMakeLists.txt  in.txt  longarithm.cpp
07longarithm/inc/: io.hpp
07longarithm/inc/lint/: lint.hpp
07longarithm/scripts/: gen.py
07longarithm/src/: longarithm.cpp
09even_numbers/: CMakeLists.txt
09even_numbers/src/: even_numbers.cpp
1/: notes.txt
1/symmetric_difference/: in.txt
1/symmetric_difference/scripts/: gen.py
1/symmetrical_difference/: CMakeLists.txt  symmdiff.cpp
10division/: CMakeLists.txt
10division/src/: division.cpp
11maxthree/: CMakeLists.txt
11maxthree/scripts/: gen.py
11maxthree/src/: maxthree.cpp
12field_priority_sort/: CMakeLists.txt
12field_priority_sort/scripts/: gen.py
12field_priority_sort/src/: field_priority_sort.cpp
13_shell/src/: shell.cpp
13shell/: CMakeLists.txt
13shell/scripts/: gen.py
13shell/src/: shell.cpp
14_very_quick_sort/: CMakeLists.txt
14very_quick_sort/src/: very_quick_sort.cpp
15_external_sort/src/: external_sort.cpp
15external_sort/: CMakeLists.txt
16wires/: CMakeLists.txt  big.txt
16wires/scripts/: gen.py
16wires/src/: task.cpp
17brockers/: CMakeLists.txt
17brockers/scripts/: gen.py
17brockers/src/: task.cpp
18set_intersection/: CMakeLists.txt
18set_intersection/scripts/: gen.py
18set_intersection/src/: task.cpp
19composite_strings/: CMakeLists.txt
19composite_strings/src/: task.cpp
20long_division/: CMakeLists.txt
20long_division/inc/lint/: lint.hpp
20long_division/scripts/: gen.py
20long_division/src/: task.cpp
21segment_tree/: CMakeLists.txt  out.txt
21segment_tree/inc/: sum_segtree.hpp
21segment_tree/scripts/: gen.py
21segment_tree/src/: task.cpp
22set_matching/: CmakeLists.txt
22set_matching/scripts/: gen.py
22set_matching/src/: task.cpp
23phone_book/: CMakeLists.txt
23phone_book/inc/: phone_book.hpp
23phone_book/src/: driver.cpp
24anagrams/: CMakeLists.txt
24anagrams/scripts/: gen.py
24anagrams/src/: task.cpp
26substrings/: CMakeLists.txt
26substrings/scripts/: gen.py
26substrings/src/: task.cpp
27database/: CMakeLists.txt
27database/inc/: database.hpp
27database/src/: task.cpp
28pattern_matching/: CMakeLists.txt
28pattern_matching/src/: task.cpp
counting_comments/: countcomm.cpp  in.txt
heap_weight_difference/: CMakeLists.txt  heapdiff.cpp  in.txt
heap_weight_difference/scripts/: gen.py
libs/lint/: CMakeLists.txt
libs/lint/inc/: lint.hpp
libs/lint/src/: lint.cpp
multiset_intersection/: CMakeLists.txt  in.txt  multiset_intersection.cpp
notes/: heaps.txt  notes1.txt  notes2.txt  notes3.txt  notes4.txt  notes5.txt
partition_problem/: CMakeLists.txt  in.txt  partition.cpp
polynomial_calculation/: CMakeLists.txt  in.txt  polycalc.cpp
subarray_sum/: CMakeLists.txt  in.txt  subarray_sum.cpp
subarray_sum/scripts/: gen.py
symmetric_difference/: CMakeLists.txt
